<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <EditText
        android:id="@+id/edtToan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_toan"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edtVan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_van"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/edtToan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/edtAnh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_anh"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/edtVan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/btnTinh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_tinh"
        app:layout_constraintTop_toBottomOf="@id/edtAnh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnXoa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_xoa"
        app:layout_constraintTop_toBottomOf="@id/btnTinh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnHienThi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_hienthi"
        app:layout_constraintTop_toBottomOf="@id/btnXoa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/txtKetQua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_default"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btnHienThi"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>